@@ -11,7 +11,6 @@ import java.time.Duration;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Collectors;
 
 @Component
 @AllArgsConstructor
@@ -24,12 +23,12 @@ public class MicrometerMetricPublisher implements MetricPublisher {
         service.submit(() -> {
             List<Tag> tags = buildTags(metricCollection);
             metricCollection.stream()
-                    .filter(record -> record.value() instanceof Duration || record.value() instanceof Integer)
-                    .forEach(record -> {
-                        if (record.value() instanceof Duration) {
-                            registry.timer(record.metric().name(), tags).record((Duration) record.value());
-                        } else if (record.value() instanceof Integer) {
-                            registry.counter(record.metric().name(), tags).increment((Integer) record.value());
+                    .filter(trecord -> trecord.value() instanceof Duration || trecord.value() instanceof Integer)
+                    .forEach(trecord -> {
+                        if (trecord.value() instanceof Duration) {
+                            registry.timer(trecord.metric().name(), tags).record((Duration) trecord.value());
+                        } else if (trecord.value() instanceof Integer) {
+                            registry.counter(trecord.metric().name(), tags).increment((Integer) trecord.value());
                         }
                     });
         });
@@ -37,13 +36,13 @@ public class MicrometerMetricPublisher implements MetricPublisher {
 
     @Override
     public void close() {
-
+        throw new UnsupportedOperationException("La operación close no está soportada en esta clase.");
     }
 
     private List<Tag> buildTags(MetricCollection metricCollection) {
         return metricCollection.stream()
                 .filter(recordt -> recordt.value() instanceof String || recordt.value() instanceof Boolean)
                 .map(recordt -> Tag.of(recordt.metric().name(), recordt.value().toString()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
